[yzq] add header

--- a/index.html
+++ b/index.html
@@ -9,7 +9,65 @@
   <link rel="stylesheet" href="./src/style/index.css">
 </head>
 <body>
-  Hello World
-  <script src="src/app.js"></script>
+  <header class="header">
+    <nav class="header-title">
+      <ul class="category-nav">
+        <li>Home</li>
+        <li>World</li>
+        <li>Technology</li>
+        <li>Design</li>
+        <li>Culture</li>
+        <li>Business</li>
+        <li>Politics</li>
+        <li>Opinion</li>
+        <li>Science</li>
+        <li>Health</li>
+      </ul>
+    </nav>
+  </header>
+  <main class="main">
+    <section class="left-section">
+      <div class="about">
+        <h2 class="about-title"> About</h2>
+        <p class="about-content">I am happy to join with you today in what will go down in history as the greatest demonstration for freedom in the history of our nation.</p>
+      </div>
+      <div class="achives">
+        <h2 class="about-title"> Archives</h2>
+        <div class="achives-content">
+          <p>January 2020</p>
+          <p>February 2020</p>
+          <p>March 2020</p>
+          <p>April 2020</p>
+          <p>May 2020</p>
+          <p>June 2020</p>
+          <p>July 2020</p>
+          <p>August 2020</p>
+          <p>Septemper 2020</p>
+          <p>October 2020</p>
+        </div>     
+      </div>
+    </section>
+    <section class="content-section">
+      <div class="content-artical">
+        Thumbnail
+      </div>
+      <div class="content-artical">
+        Thumbnail
+      </div>
+      <div class="content-artical">
+        Thumbnail
+      </div>
+    </section>
+    <section class="right-section">
+      <div class="login-in">
+        login in
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+      <p class="footer-message" >Advanced CSS homework built by <span class="creater">@Your Name</span></p>
+      <p class="back-to">Back to top</p>
+    </div>
+  </footer>
 </body>
 </html>
