--- a/index.html
+++ b/index.html
@@ -49,13 +49,34 @@
     </section>
     <section class="content-section">
       <div class="content-artical">
-        Thumbnail
+        <figure class="about-thumbnail">
+          <img class="thumbnail-img" src="./src/assets/Thumbnail.png" alt="Thumbnail">
+          <figcaption clas="thumbnail-info">
+            <h3 class="thumbnail-title">Artical 1</h3>
+            <p class="thumbnail-message">Five score years ago, a great American, in whose symbolic shadow we stand today, signed the Emancipation Proclamation. </p>
+            <p class="thumbnail-details"> View details <span class="detail-icon">>></span></p>
+          </figcaption>
+        </figure>
       </div>
       <div class="content-artical">
-        Thumbnail
+        <figure class="about-thumbnail">
+          <img class="thumbnail-img" src="./src/assets/Thumbnail.png" alt="Thumbnail">
+          <figcaption clas="thumbnail-info">
+            <h3 class="thumbnail-title">Artical 2</h3>
+            <p class="thumbnail-message">But one hundred years later, the Negro still is not free. One hundred years later, the life of the Negro is still sadly crippled by the manacles of segregation and the chains of discrimination. One hundred years later, the Negro lives on a lonely island of poverty in the midst of a vast ocean of material prosperity. </p>
+            <p class="thumbnail-details"> View details <span class="detail-icon">>></span></p>
+          </figcaption>
+        </figure>
       </div>
       <div class="content-artical">
-        Thumbnail
+        <figure class="about-thumbnail">
+          <img class="thumbnail-img" src="./src/assets/Thumbnail.png" alt="Thumbnail">
+          <figcaption clas="thumbnail-info">
+            <h3 class="thumbnail-title">Artical 3</h3>
+            <p class="thumbnail-message">This momentous decree came as a great beacon light of hope to millions of Negro slaves who had been seared in the flames of withering injustice. It came as a joyous daybreak to end the long night of their captivity.</p>
+            <p class="thumbnail-details"> View details <span class="detail-icon">>></span></p>
+          </figcaption>
+        </figure>
       </div>
     </section>
     <section class="right-section">
