--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       <div class="content-artical">
         <figure class="about-thumbnail">
           <img class="thumbnail-img" src="./src/assets/Thumbnail.png" alt="Thumbnail">
-          <figcaption clas="thumbnail-info">
+          <figcaption class="thumbnail-info">
             <h3 class="thumbnail-title">Artical 1</h3>
-            <p class="thumbnail-message">Five score years ago, a great American, in whose symbolic shadow we stand today, signed the Emancipation Proclamation. </p>
+            <p class="thumbnail-message">Five score years ago, a great American, in who symbolic shadow we stand today, signed the Emancipation Proclamation. </p>
             <p class="thumbnail-details"> View details <span class="detail-icon">>></span></p>
           </figcaption>
         </figure>
@@ -61,9 +61,12 @@
       <div class="content-artical">
         <figure class="about-thumbnail">
           <img class="thumbnail-img" src="./src/assets/Thumbnail.png" alt="Thumbnail">
-          <figcaption clas="thumbnail-info">
+          <figcaption class="thumbnail-info">
             <h3 class="thumbnail-title">Artical 2</h3>
-            <p class="thumbnail-message">But one hundred years later, the Negro still is not free. One hundred years later, the life of the Negro is still sadly crippled by the manacles of segregation and the chains of discrimination. One hundred years later, the Negro lives on a lonely island of poverty in the midst of a vast ocean of material prosperity. </p>
+            <p class="thumbnail-message">
+              But one hundred years later, the Negro still is not free. One hundred years later, the life of the Negro is still sadly crippled by the manacles of segregation and the chains of discrimination. One hundred years later, the Negro lives on a lonely island of poverty in the midst of a vast ocean of material prosperity.
+              But we refuse to believe that the bank of justice is bankrupt. We refuse to believe that there are insufficient funds in the great vaults of opportunity of this nation. And so, we've come to cash this check, a check that will give us upon demand the riches of freedom and the security of justice.
+            </p>
             <p class="thumbnail-details"> View details <span class="detail-icon">>></span></p>
           </figcaption>
         </figure>
@@ -71,9 +74,12 @@
       <div class="content-artical">
         <figure class="about-thumbnail">
           <img class="thumbnail-img" src="./src/assets/Thumbnail.png" alt="Thumbnail">
-          <figcaption clas="thumbnail-info">
+          <figcaption class="thumbnail-info">
             <h3 class="thumbnail-title">Artical 3</h3>
-            <p class="thumbnail-message">This momentous decree came as a great beacon light of hope to millions of Negro slaves who had been seared in the flames of withering injustice. It came as a joyous daybreak to end the long night of their captivity.</p>
+            <p class="thumbnail-message">
+              This momentous decree came as a great beacon light of hope to millions of Negro slaves who had been seared in the flames of withering injustice. It came as a joyous daybreak to end the long night of their captivity.
+              We have also come to this hallowed spot to remind America of the fierce urgency of Now. This is no time to engage in the luxury of cooling off or to take the tranquilizing drug of gradualism. 
+            </p>
             <p class="thumbnail-details"> View details <span class="detail-icon">>></span></p>
           </figcaption>
         </figure>
