add a black line

--- a/index.html
+++ b/index.html
@@ -47,13 +47,15 @@
         </div>     
       </div>
     </section>
+    
     <section class="content-section">
       <div class="content-artical">
         <figure class="about-thumbnail">
           <img class="thumbnail-img" src="./src/assets/Thumbnail.png" alt="Thumbnail">
           <figcaption class="thumbnail-info">
             <h3 class="thumbnail-title">Artical 1</h3>
-            <p class="thumbnail-message">Five score years ago, a great American, in who symbolic shadow we stand today, signed the Emancipation Proclamation. </p>
+            <p class="thumbnail-message">Five score years ago, a
+              great American, in who symbolic shadow we stand today, signed the Emancipation Proclamation. </p>
             <p class="thumbnail-details"> View details <span class="detail-icon">>></span></p>
           </figcaption>
         </figure>
