在content中添加了一个段落

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <p>August 2020</p>
           <p>Septemper 2020</p>
           <p>October 2020</p>
+          <p>October 2020</p>
         </div>     
       </div>
     </section>
